objects/Appointment__c.object
<CustomObject>
    <label>Appointment</label>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <label>Doctor Name</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient Name</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
</CustomObject>